--- a/Time_Series.html
+++ b/Time_Series.html
@@ -247,6 +247,9 @@ $(document).ready(function () {
         <li>
   <a href="index.html">Home</a>
 </li>
+<li>
+  <a href="Time_Series.html">Time Series</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -287,6 +290,12 @@ library(fpp)</code></pre>
 ## 
 ##     as.Date, as.Date.numeric</code></pre>
 <pre><code>## Loading required package: tseries</code></pre>
+<pre><code>## 
+##     &#39;tseries&#39; version: 0.10-58
+## 
+##     &#39;tseries&#39; is a package for time series analysis and computational finance.
+## 
+##     See &#39;library(help=&quot;tseries&quot;)&#39; for details.</code></pre>
 <pre class="r"><code># 1. SES MODEL FOR AUS AIR 
 data(ausair)
 plot(ausair)</code></pre>
@@ -306,26 +315,17 @@ fit3 = ses(air, h = 3) #defaults
 # the forecast package has a nice accuracy funciton with various metrics just pass it the 
 # the model and the data!  (This is the &quot;training&quot; data)
 accuracy(fit1, ausair)</code></pre>
-<pre><code>##                     ME      RMSE       MAE      MPE     MAPE     MASE
-## Training set  8.306207  8.961575  8.306207 26.03453 26.03453 4.531773
-## Test set     16.766602 16.849234 16.766602 35.75987 35.75987 9.147670
-##                      ACF1 Theil&#39;s U
-## Training set  0.565996103        NA
-## Test set     -0.003569265  8.622667</code></pre>
+<pre><code>##                     ME      RMSE       MAE      MPE     MAPE     MASE         ACF1 Theil&#39;s U
+## Training set  8.306207  8.961575  8.306207 26.03453 26.03453 4.531773  0.565996103        NA
+## Test set     16.766602 16.849234 16.766602 35.75987 35.75987 9.147670 -0.003569265  8.622667</code></pre>
 <pre class="r"><code>accuracy(fit2, ausair)</code></pre>
-<pre><code>##                    ME     RMSE      MAE       MPE      MAPE     MASE
-## Training set 2.576335 3.101549 2.582686  8.507273  8.528313 1.409084
-## Test set     6.038897 6.264665 6.038897 12.797965 12.797965 3.294755
-##                      ACF1 Theil&#39;s U
-## Training set  0.206215181        NA
-## Test set     -0.003569265  3.443693</code></pre>
+<pre><code>##                    ME     RMSE      MAE       MPE      MAPE     MASE         ACF1 Theil&#39;s U
+## Training set 2.576335 3.101549 2.582686  8.507273  8.528313 1.409084  0.206215181        NA
+## Test set     6.038897 6.264665 6.038897 12.797965 12.797965 3.294755 -0.003569265  3.443693</code></pre>
 <pre class="r"><code>accuracy(fit3, ausair)</code></pre>
-<pre><code>##                    ME     RMSE      MAE       MPE      MAPE      MASE
-## Training set 1.602998 2.290962 1.710834  5.406487  5.766099 0.9334119
-## Test set     5.182781 5.444168 5.182781 10.965507 10.965507 2.8276672
-##                      ACF1 Theil&#39;s U
-## Training set -0.085328673        NA
-## Test set     -0.003569265  3.032778</code></pre>
+<pre><code>##                    ME     RMSE      MAE       MPE      MAPE      MASE         ACF1 Theil&#39;s U
+## Training set 1.602998 2.290962 1.710834  5.406487  5.766099 0.9334119 -0.085328673        NA
+## Test set     5.182781 5.444168 5.182781 10.965507 10.965507 2.8276672 -0.003569265  3.032778</code></pre>
 <pre class="r"><code>#Reset the plot
 plot(air,ylab = &quot;Airline Passegners&quot;, xlab = &quot;Year&quot;, type = &quot;o&quot;, xlim = c(1990, 2008),ylim = c(15,50), main = &quot;Airline Passengers&quot;)
 
@@ -345,26 +345,17 @@ points(air2008, type = &quot;o&quot;)</code></pre>
 <p><img src="Time_Series_files/figure-html/unnamed-chunk-1-3.png" width="672" /></p>
 <pre class="r"><code># Compare the forecasts with the actual values with various fit metrics.  
 accuracy(fit1, air2008)</code></pre>
-<pre><code>##                     ME      RMSE       MAE      MPE     MAPE     MASE
-## Training set  8.306207  8.961575  8.306207 26.03453 26.03453 4.531773
-## Test set     16.766602 16.849234 16.766602 35.75987 35.75987 9.147670
-##                      ACF1 Theil&#39;s U
-## Training set  0.565996103        NA
-## Test set     -0.003569265  8.622667</code></pre>
+<pre><code>##                     ME      RMSE       MAE      MPE     MAPE     MASE         ACF1 Theil&#39;s U
+## Training set  8.306207  8.961575  8.306207 26.03453 26.03453 4.531773  0.565996103        NA
+## Test set     16.766602 16.849234 16.766602 35.75987 35.75987 9.147670 -0.003569265  8.622667</code></pre>
 <pre class="r"><code>accuracy(fit2, air2008)</code></pre>
-<pre><code>##                    ME     RMSE      MAE       MPE      MAPE     MASE
-## Training set 2.576335 3.101549 2.582686  8.507273  8.528313 1.409084
-## Test set     6.038897 6.264665 6.038897 12.797965 12.797965 3.294755
-##                      ACF1 Theil&#39;s U
-## Training set  0.206215181        NA
-## Test set     -0.003569265  3.443693</code></pre>
+<pre><code>##                    ME     RMSE      MAE       MPE      MAPE     MASE         ACF1 Theil&#39;s U
+## Training set 2.576335 3.101549 2.582686  8.507273  8.528313 1.409084  0.206215181        NA
+## Test set     6.038897 6.264665 6.038897 12.797965 12.797965 3.294755 -0.003569265  3.443693</code></pre>
 <pre class="r"><code>accuracy(fit3, air2008)</code></pre>
-<pre><code>##                    ME     RMSE      MAE       MPE      MAPE      MASE
-## Training set 1.602998 2.290962 1.710834  5.406487  5.766099 0.9334119
-## Test set     5.182781 5.444168 5.182781 10.965507 10.965507 2.8276672
-##                      ACF1 Theil&#39;s U
-## Training set -0.085328673        NA
-## Test set     -0.003569265  3.032778</code></pre>
+<pre><code>##                    ME     RMSE      MAE       MPE      MAPE      MASE         ACF1 Theil&#39;s U
+## Training set 1.602998 2.290962 1.710834  5.406487  5.766099 0.9334119 -0.085328673        NA
+## Test set     5.182781 5.444168 5.182781 10.965507 10.965507 2.8276672 -0.003569265  3.032778</code></pre>
 <pre class="r"><code>fit1$model</code></pre>
 <pre><code>## Simple exponential smoothing 
 ## 
@@ -391,8 +382,8 @@ fitted(fit1h)</code></pre>
 ## Start = 1990 
 ## End = 2004 
 ## Frequency = 1 
-##  [1] 21.86010 22.03237 25.48462 27.54059 30.28813 30.26106 31.58122 32.59923
-##  [9] 33.24224 32.26755 33.07776 33.95807 34.77708 40.05535 43.21586</code></pre>
+##  [1] 21.86010 22.03237 25.48462 27.54059 30.28813 30.26106 31.58122 32.59923 33.24224 32.26755
+## [11] 33.07776 33.95807 34.77708 40.05535 43.21586</code></pre>
 <pre class="r"><code># Check out the forecast value (h of them)
 fit1h$mean</code></pre>
 <pre><code>## Time Series:
@@ -425,63 +416,39 @@ lines(fit4h$mean,col = &quot;cyan&quot;, type= &quot;o&quot;)
 
 # with implicit Test set... it figures out by the time which are training and which are test. 
 accuracy(fit1h, ausair)</code></pre>
-<pre><code>##                      ME     RMSE      MAE       MPE     MAPE      MASE
-## Training set -1.0292272 2.202869 1.772637 -4.485612 6.364749 0.9671310
-## Test set      0.9405879 1.444776 1.371076  1.947628 2.808140 0.7480438
-##                    ACF1 Theil&#39;s U
-## Training set  0.2088940        NA
-## Test set     -0.3313068 0.7212626</code></pre>
+<pre><code>##                      ME     RMSE      MAE       MPE     MAPE      MASE       ACF1 Theil&#39;s U
+## Training set -1.0292272 2.202869 1.772637 -4.485612 6.364749 0.9671310  0.2088940        NA
+## Test set      0.9405879 1.444776 1.371076  1.947628 2.808140 0.7480438 -0.3313068 0.7212626</code></pre>
 <pre class="r"><code>accuracy(fit2h, ausair)</code></pre>
-<pre><code>##                     ME     RMSE      MAE       MPE     MAPE     MASE      ACF1
-## Training set -2.010092 2.908422 2.565680 -7.724285 9.137707 1.399806 0.3109081
-## Test set     -1.836519 2.883708 1.859959 -3.672580 3.725068 1.014773 0.1029680
-##              Theil&#39;s U
-## Training set        NA
-## Test set      1.403487</code></pre>
+<pre><code>##                     ME     RMSE      MAE       MPE     MAPE     MASE      ACF1 Theil&#39;s U
+## Training set -2.010092 2.908422 2.565680 -7.724285 9.137707 1.399806 0.3109081        NA
+## Test set     -1.836519 2.883708 1.859959 -3.672580 3.725068 1.014773 0.1029680  1.403487</code></pre>
 <pre class="r"><code>accuracy(fit3h, ausair)</code></pre>
-<pre><code>##                     ME     RMSE      MAE       MPE     MAPE     MASE      ACF1
-## Training set 0.3317307 1.653933 1.084962 0.7156323 3.371681 0.591943 0.1675855
-## Test set     3.8715783 4.131618 3.871578 7.8802382 7.880238 2.112290 0.2453622
-##              Theil&#39;s U
-## Training set        NA
-## Test set      2.086233</code></pre>
+<pre><code>##                     ME     RMSE      MAE       MPE     MAPE     MASE      ACF1 Theil&#39;s U
+## Training set 0.3317307 1.653933 1.084962 0.7156323 3.371681 0.591943 0.1675855        NA
+## Test set     3.8715783 4.131618 3.871578 7.8802382 7.880238 2.112290 0.2453622  2.086233</code></pre>
 <pre class="r"><code>accuracy(fit4h, ausair)</code></pre>
-<pre><code>##                     ME     RMSE      MAE       MPE     MAPE      MASE      ACF1
-## Training set 0.3290223 1.702503 1.132340 0.7038748 3.577884 0.6177922 0.1601950
-## Test set     3.6193313 3.852076 3.619331 7.3722246 7.372225 1.9746665 0.2053408
-##              Theil&#39;s U
-## Training set        NA
-## Test set      1.941093</code></pre>
+<pre><code>##                     ME     RMSE      MAE       MPE     MAPE      MASE      ACF1 Theil&#39;s U
+## Training set 0.3290223 1.702503 1.132340 0.7038748 3.577884 0.6177922 0.1601950        NA
+## Test set     3.6193313 3.852076 3.619331 7.3722246 7.372225 1.9746665 0.2053408  1.941093</code></pre>
 <pre class="r"><code>#with explicit Test set ... (same output)
 airTest = window(ausair, start = 2005)
 accuracy(fit1h, airTest)</code></pre>
-<pre><code>##                      ME     RMSE      MAE       MPE     MAPE      MASE
-## Training set -1.0292272 2.202869 1.772637 -4.485612 6.364749 0.9671310
-## Test set      0.9405879 1.444776 1.371076  1.947628 2.808140 0.7480438
-##                    ACF1 Theil&#39;s U
-## Training set  0.2088940        NA
-## Test set     -0.3313068 0.7212626</code></pre>
+<pre><code>##                      ME     RMSE      MAE       MPE     MAPE      MASE       ACF1 Theil&#39;s U
+## Training set -1.0292272 2.202869 1.772637 -4.485612 6.364749 0.9671310  0.2088940        NA
+## Test set      0.9405879 1.444776 1.371076  1.947628 2.808140 0.7480438 -0.3313068 0.7212626</code></pre>
 <pre class="r"><code>accuracy(fit2h, airTest)</code></pre>
-<pre><code>##                     ME     RMSE      MAE       MPE     MAPE     MASE      ACF1
-## Training set -2.010092 2.908422 2.565680 -7.724285 9.137707 1.399806 0.3109081
-## Test set     -1.836519 2.883708 1.859959 -3.672580 3.725068 1.014773 0.1029680
-##              Theil&#39;s U
-## Training set        NA
-## Test set      1.403487</code></pre>
+<pre><code>##                     ME     RMSE      MAE       MPE     MAPE     MASE      ACF1 Theil&#39;s U
+## Training set -2.010092 2.908422 2.565680 -7.724285 9.137707 1.399806 0.3109081        NA
+## Test set     -1.836519 2.883708 1.859959 -3.672580 3.725068 1.014773 0.1029680  1.403487</code></pre>
 <pre class="r"><code>accuracy(fit3h, airTest)</code></pre>
-<pre><code>##                     ME     RMSE      MAE       MPE     MAPE     MASE      ACF1
-## Training set 0.3317307 1.653933 1.084962 0.7156323 3.371681 0.591943 0.1675855
-## Test set     3.8715783 4.131618 3.871578 7.8802382 7.880238 2.112290 0.2453622
-##              Theil&#39;s U
-## Training set        NA
-## Test set      2.086233</code></pre>
+<pre><code>##                     ME     RMSE      MAE       MPE     MAPE     MASE      ACF1 Theil&#39;s U
+## Training set 0.3317307 1.653933 1.084962 0.7156323 3.371681 0.591943 0.1675855        NA
+## Test set     3.8715783 4.131618 3.871578 7.8802382 7.880238 2.112290 0.2453622  2.086233</code></pre>
 <pre class="r"><code>accuracy(fit4h, airTest)</code></pre>
-<pre><code>##                     ME     RMSE      MAE       MPE     MAPE      MASE      ACF1
-## Training set 0.3290223 1.702503 1.132340 0.7038748 3.577884 0.6177922 0.1601950
-## Test set     3.6193313 3.852076 3.619331 7.3722246 7.372225 1.9746665 0.2053408
-##              Theil&#39;s U
-## Training set        NA
-## Test set      1.941093</code></pre>
+<pre><code>##                     ME     RMSE      MAE       MPE     MAPE      MASE      ACF1 Theil&#39;s U
+## Training set 0.3290223 1.702503 1.132340 0.7038748 3.577884 0.6177922 0.1601950        NA
+## Test set     3.6193313 3.852076 3.619331 7.3722246 7.372225 1.9746665 0.2053408  1.941093</code></pre>
 <pre class="r"><code>#Add the actual values to visually compare forecasts to actual values
 air2008 = window(ausair, start = 1990, end = 2009)
 points(air2008, type = &quot;o&quot;)
@@ -523,19 +490,13 @@ lines(fit2s$mean,col = &quot;red&quot;, type= &quot;o&quot;)
 
 #Compare the accuracy
 accuracy(fit1s,austourists)</code></pre>
-<pre><code>##                      ME     RMSE      MAE        MPE      MAPE      MASE
-## Training set -0.4377946 2.266717 1.882623  -1.842903  6.492401 0.6090876
-## Test set     -5.0401911 6.019319 5.172738 -14.174410 14.398562 1.6735428
-##                     ACF1 Theil&#39;s U
-## Training set -0.04231276        NA
-## Test set     -0.13264014 0.5996539</code></pre>
+<pre><code>##                      ME     RMSE      MAE        MPE      MAPE      MASE        ACF1 Theil&#39;s U
+## Training set -0.4377946 2.266717 1.882623  -1.842903  6.492401 0.6090876 -0.04231276        NA
+## Test set     -5.0401911 6.019319 5.172738 -14.174410 14.398562 1.6735428 -0.13264014 0.5996539</code></pre>
 <pre class="r"><code>accuracy(fit2s,austourists)</code></pre>
-<pre><code>##                      ME     RMSE      MAE        MPE     MAPE      MASE
-## Training set 0.07223675 2.180841 1.626375 -0.1303281 5.531772 0.5261833
-## Test set     0.88033413 2.627779 1.933411  1.3152869 4.865291 0.6255191
-##                    ACF1 Theil&#39;s U
-## Training set 0.09930429        NA
-## Test set     0.26125025 0.2670124</code></pre>
+<pre><code>##                      ME     RMSE      MAE        MPE     MAPE      MASE       ACF1 Theil&#39;s U
+## Training set 0.07223675 2.180841 1.626375 -0.1303281 5.531772 0.5261833 0.09930429        NA
+## Test set     0.88033413 2.627779 1.933411  1.3152869 4.865291 0.6255191 0.26125025 0.2670124</code></pre>
 <pre class="r"><code>#add the actual values to visually compare the forecasts to the actual values. 
 points(austourists, type = &quot;o&quot;)
 
@@ -547,7 +508,7 @@ legend(&quot;topleft&quot;, legend = c(&quot;Additive&quot;, &quot;Exponential&q
 <h2>Compare</h2>
 <pre class="r"><code>#install.packages(&quot;fpp2&quot;)
 library(fpp2)</code></pre>
-<pre><code>## ── Attaching packages ────────────────────────────────────────────── fpp2 2.5 ──</code></pre>
+<pre><code>## ── Attaching packages ──────────────────────────────────────────────────────────────── fpp2 2.5 ──</code></pre>
 <pre><code>## ✔ ggplot2 3.5.1</code></pre>
 <pre><code>## </code></pre>
 <pre><code>## 
@@ -557,8 +518,8 @@ library(fpp2)</code></pre>
 ##     ausair, austourists</code></pre>
 <pre><code>## The following objects are masked from &#39;package:fpp&#39;:
 ## 
-##     ausair, ausbeer, austa, austourists, debitcards, departures,
-##     elecequip, euretail, guinearice, oil, sunspotarea, usmelec</code></pre>
+##     ausair, ausbeer, austa, austourists, debitcards, departures, elecequip, euretail,
+##     guinearice, oil, sunspotarea, usmelec</code></pre>
 <pre class="r"><code># Simple Exponential Smoothing
 
 # Select the training data (1990 to 2011)
@@ -584,12 +545,9 @@ temp_forecast_period = window(maxtemp, start = 2012, end = 2021)</code></pre>
 
 # Compare the forecasts with the actual values within the forecast period
 accuracy(fit1, temp_forecast_period)</code></pre>
-<pre><code>##                     ME     RMSE      MAE       MPE     MAPE      MASE
-## Training set 0.5955428 2.474359 1.882736 1.1522489 4.562688 0.6924249
-## Test set     0.1464958 1.399093 1.229299 0.2363922 2.944038 0.4521065
-##                    ACF1 Theil&#39;s U
-## Training set -0.2102181        NA
-## Test set      0.1983471  0.704348</code></pre>
+<pre><code>##                     ME     RMSE      MAE       MPE     MAPE      MASE       ACF1 Theil&#39;s U
+## Training set 0.5955428 2.474359 1.882736 1.1522489 4.562688 0.6924249 -0.2102181        NA
+## Test set     0.1464958 1.399093 1.229299 0.2363922 2.944038 0.4521065  0.1983471  0.704348</code></pre>
 <pre class="r"><code>fit1$model</code></pre>
 <pre><code>## Simple exponential smoothing 
 ## 
@@ -664,12 +622,9 @@ lines(fit2$mean,col = &quot;darkgreen&quot;, type= &quot;o&quot;)</code></pre>
 ##      AIC     AICc      BIC 
 ## 118.9070 122.6570 124.3622</code></pre>
 <pre class="r"><code>accuracy(fit2, temp_forecast_period)</code></pre>
-<pre><code>##                       ME     RMSE      MAE        MPE     MAPE      MASE
-## Training set  0.05966429 2.533589 2.033749 -0.1330182 4.994371 0.7479638
-## Test set     -0.46362339 1.734188 1.387825 -1.2363893 3.372133 0.5104085
-##                    ACF1 Theil&#39;s U
-## Training set -0.2537591        NA
-## Test set      0.2447504 0.6380084</code></pre>
+<pre><code>##                       ME     RMSE      MAE        MPE     MAPE      MASE       ACF1 Theil&#39;s U
+## Training set  0.05966429 2.533589 2.033749 -0.1330182 4.994371 0.7479638 -0.2537591        NA
+## Test set     -0.46362339 1.734188 1.387825 -1.2363893 3.372133 0.5104085  0.2447504 0.6380084</code></pre>
 </div>
 </div>
 
